# market-strats-lab

./: .gitignore  README.md  pyproject.toml  scratch_pb_analysis.py
configs/: spy_sma10.yaml
notebooks/: phase17c_strategy_factory_transaction_visuals.ipynb  regime_informed_portfolio_performance_dashboard.ipynb  regime_informed_results_dashboard.ipynb
scripts/: build_regime_informed_portfolio_performance_notebook.py  build_regime_informed_results_notebook.py  build_strategy_factory_transaction_notebook.py  fill_phase23i_shadow_session.py  fill_regime_informed_entered_paper_session.py
tests/: test_accounting.py  test_annual_rebalance_audit.py  test_asset_expansion_diagnostic.py  test_behavioural_regret_audit.py  test_bid_ask_market_impact_diagnostic.py  test_bootstrap_stability_audit.py  test_bootstrap_statistical_robustness.py  test_candidate_portfolio_attribution.py  test_candidate_portfolio_decision.py  test_candidate_portfolio_warmup_audit.py  test_cash_rates.py  test_commercial_route_decision_bundle.py  test_comparison.py  test_core_satellite.py  test_core_satellite_diagnostic.py  test_corrected_visual_source_rerun_bundle.py  test_cross_asset_diagnostics.py  test_daily_paper_runner.py  test_daily_sma_trend.py  test_diagnostic_macro_regime_analysis.py  test_diagnostic_score_calculation_and_audit.py  test_diagnostic_score_interpretation_closeout.py  test_drawdown_tranche.py  test_dual_momentum.py  test_dual_momentum_audit.py  test_dual_momentum_opportunity.py  test_dynamic_multi_asset_opportunity_engine.py  test_dynamic_opportunity_diagnostics.py  (+157 more)
(+327 files in other folders)
